creation customer function without design

--- a/APPLI/CUSTOMER/EDIT/HTML/INPUT.HTML
+++ b/APPLI/CUSTOMER/EDIT/HTML/INPUT.HTML
@@ -1,9 +1,10 @@
 <!--<!DOCTYPE html>-->
 <!--<html>-->
-    <body>
+<body>
+    <div class="container">
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
-                <h1>Customer <span class="label label-default">Update</span></h1>
+                <h1>Customer update<span class="label label-default">Input</span></h1>
 		        <form action="/APP/CUSTOMER/EDIT/CONFIRM" method="POST">
                     <div class="form-group">
                         <span class="label label-danger ###FAMILY_NAME_ERR###">FAMILY NAME was Invalid.</span>
@@ -50,5 +51,6 @@
 		        </form>
             </div>
         </div>
-	</body>
+    </div>
+</body>
 <!--</html>-->
