--- a/APPLI/CUSTOMER/DELETE/HTML/COMPLETE.HTML
+++ b/APPLI/CUSTOMER/DELETE/HTML/COMPLETE.HTML
@@ -4,7 +4,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
-                <h1>Customer <span class="label label-success">Delete Complete</span></h1>
+                <h1>Customer delete <span class="label label-success">Complete</span></h1>
                 <h2>Deleted below customer record.<h2>
 		        <form action="/APP/CUSTOMER/LISTS/" method="GET">
                     <div class="form-group">
