--- a/APPLI/CUSTOMER/DELETE/HTML/CONFIRM.HTML
+++ b/APPLI/CUSTOMER/DELETE/HTML/CONFIRM.HTML
@@ -1,9 +1,10 @@
 <!--<!DOCTYPE html>-->
 <!--<html>-->
-    <body>
+<body>
+    <div class="container">
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
-                <h1>Customer <span class="label label-default">Delete</span></h1>
+                <h1>Customer delete <span class="label label-default">Confirm</span></h1>
 		        <form action="/APP/CUSTOMER/DELETE/COMPLETE" method="POST">
                     <div class="form-group">
                         <span class="label label-danger ">
@@ -46,5 +47,6 @@
 		        </form>
             </div>
         </div>
-	</body>
+    </div>
+</body>
 <!--</html>-->
