--- a/APPLI/CUSTOMER/EDIT/HTML/COMPLETE.HTML
+++ b/APPLI/CUSTOMER/EDIT/HTML/COMPLETE.HTML
@@ -1,10 +1,10 @@
 <!--<!DOCTYPE html>-->
 <!--<html>-->
-    <body>
+<body>
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
-                <h1>Customer <span class="label label-success">Complete</span></h1>
+                <h1>Customer update <span class="label label-success">Complete</span></h1>
 		        <form action="/APP/CUSTOMER/LISTS/" method="GET">
                     <div class="form-group">
 			            <h3>
@@ -38,5 +38,5 @@
             </div>
         </div>
     </div>
-	</body>
+</body>
 <!--</html>-->
