--- a/APPLI/CUSTOMER/EDIT/HTML/CONFIRM.HTML
+++ b/APPLI/CUSTOMER/EDIT/HTML/CONFIRM.HTML
@@ -4,7 +4,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
-                <h1>Cusromer<span class="label label-info">Confirm</span></h1>
+                <h1>Cusromer update <span class="label label-info">Confirm</span></h1>
 		        <form action="/APP/CUSTOMER/EDIT/COMPLETE" method="POST">
                     <div class="form-group">
 			            <h2>
