side menu brash up

--- a/HTML/NAVBAR.HTML
+++ b/HTML/NAVBAR.HTML
@@ -2,13 +2,13 @@
         <!--navbar-->
         <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
             <div class="navbar-header">
-                <a class="navbar-brand" href="#">
+                <a id="showLeft" class="navbar-brand" href="#">
                 </a>
             </div>
 
             <ul class="nav navbar-nav navbar-right" style="margin-right:0px;">
                 <li class="">
-                    <a id="showLeft" href="#">
+                    <a id="showLeft2" href="#">
                         <i class="glyphicon glyphicon-menu-hamburger"></i>
                     </a>
                 </li>
