PARTS LIST Filter Linking

--- a/APPLI/PARTS_LIST/LISTS/HTML/CATEGORY_NEW.HTML
+++ b/APPLI/PARTS_LIST/LISTS/HTML/CATEGORY_NEW.HTML
@@ -1,6 +1,6 @@
 <!--PARTS CATEGORY Records for NEW-->
 <!--RECORDS-->
-<li name="PARTS_CATEGORY_NEW">
+<li name="CATEGORY_NEW">
     <a id="cat-list-%1" onclick="categoryChoice(%1,this); return false;" >%2</a>
 </li>
 <!--RECORDS-->
