--- a/APPLI/PARTS_LIST/LISTS/HTML/CATEGORY_PAGE.HTML
+++ b/APPLI/PARTS_LIST/LISTS/HTML/CATEGORY_PAGE.HTML
@@ -1,6 +1,6 @@
 <!--PARTS CATEGORY Records for Page Filter-->
 <!--RECORDS-->
-<li name="PARTS_CATEGORY_PAGE">
+<li name="CATEGORY_PAGE">
     <a id="cat-list-%1" onclick="categoryChoice(%1,this); return false;" >%2</a>
 </li>
 <!--RECORDS-->
