--- a/APPLI/PARTS_LIST/LISTS/HTML/RECORDS.HTML
+++ b/APPLI/PARTS_LIST/LISTS/HTML/RECORDS.HTML
@@ -13,14 +13,14 @@
                 
                 <div class="btn-group">
                     
-                    <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" id="parts_category" aria-expended="false">
+                    <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" id="category" aria-expended="false">
                         <span class="caret"></span>
                     </button>
                     <ul class="dropdown-menu" role="menu" name="%2">
-                        ###PARTS_CATEGORY###
+                        ###CATEGORY###
                     </ul>
-                    <input type="text" name="PARTS_CATEGORY_NAME_%2" id="PARTS_CATEGORY_NAME_%2" value="%3" class="form-control" disabled />
-                    <input type="hidden" name="PARTS_CATEGORY_NAME_HIDDEN_%2" id="PARTS_CATEGORY_NAME_HIDDEN_%2" value="%3" class="form-control" />
+                    <input type="text" name="CATEGORY_%2" id="CATEGORY_%2" value="%3" class="form-control" disabled />
+                    <input type="hidden" name="CATEGORY_%2_HIDDEN" id="CATEGORY_%2_HIDDEN" value="%3" class="form-control" />
                 </div>
                 </div>
             </div>
