--- a/APPLI/PARTS_LIST/LISTS/HTML/TABLE.HTML
+++ b/APPLI/PARTS_LIST/LISTS/HTML/TABLE.HTML
@@ -27,11 +27,11 @@
                             <span class="caret"></span>
                         </button>
                         <ul class="dropdown-menu" role="menu" name="NEW">
-                            ###PARTS_CATEGORY###
+                            ###CATEGORY###
                         </ul>
                     </div>
-                    <input type="text" name="PARTS_CATEGORY_NAME_NEW" id="PARTS_CATEGORY_NAME_NEW" value="" class="form-control" disabled />
-                    <input type="hidden" name="PARTS_CATEGORY_NAME_HIDDEN_NEW" id="PARTS_CATEGORY_NAME_HIDDEN_NEW" value="" class="form-control" />
+                    <input type="text" name="CATEGORY_NEW" id="CATEGORY_NEW" value="" class="form-control" disabled />
+                    <input type="hidden" name="CATEGORY_NEW_HIDDEN" id="CATEGORY_NEW_HIDDEN" value="" class="form-control" />
                 </div>
             </td>
             <td>
