--- a/APPLI/STUFF/SIGNIN/HTML/INPUT.HTML
+++ b/APPLI/STUFF/SIGNIN/HTML/INPUT.HTML
@@ -2,75 +2,71 @@
 <!--<!DOCTYPE html>-->
 <!--<html>-->
 <!--<body>-->
-    <div class="col-md-9">
 
-        <!--Contents Header Title-->
-        <div class="container" style="margin-bottom:15px;">
+        <div class="container">
+
+            <!--Header Title-->
             <div class="row">
-                <h1 class="">
-                    <p>Stuff sign in</p>
+                <h1 class="col-sm-6">
+                    <p class="page-title">Stuff sign in</p>
                 </h1>
             </div>
-        </div>
 
-        <!--Contents Header Information-->
-        <div class="container" style="margin-bottom:15px;">
-            <form class="form-horizontal header-info">
-                <div class="form-group">
-                    <h3>
-                        <label class="control-label col-sm-1" for="">
-                            <i class="glyphicon glyphicon-info-sign"></i>
+            <!--Header info-->
+            <div class="row">
+                <div class="col-sm-1 hidden-xs" >
+                    <label class="control-label col-sm-1">
+                        <h3><i class="glyphicon glyphicon-info-sign"></i></h3>
+                    </label>
+                </div>
+                <div class="col-sm-6 lbl-header-info">
+                    <span class="label label-lg label-###INFO_LV### lbl-header-info">
+                        ###AUTH_MSG###
+                    </span>
+                </div>
+            </div>
+
+            <!--Contents-->
+            <form action="/APP/STUFF/SIGNIN/AUTH" method="POST">
+                
+                <!--ID(EMail)-->
+                <div class="row">
+                    <div class="col-sm-1 hidden-xs">
+                        <label class="control-label col-sm-1">
+                            <h3><i class="glyphicon glyphicon-envelope"></i></h3>
                         </label>
-                    </h3>
-                    <h4>
-                        <div class="col-sm-5" style="text-align:left;">
-                            <p><span class="label label-lg label-###INFO_LV###">###AUTH_MSG###</span></p>
+                    </div>
+                    <div class="col-sm-6 col-xs-11">
+                        <div class="form-group" style="margin-top:10px;">
+	                        <input type="email" id="ID" name="ID" value="###ID_VALUE###" class="form-control" placeholder="ID(Email)" >
                         </div>
-                    </h4>
+                    </div>
+                    <div class="col-sm-5 col-xs-1"></div>
                 </div>
-            </form>
-        </div>
 
-        <!--Contents-->
-        <div class="container" style="padding;20px;">
-            <form class="form-horizontal" style="margin-bottom:15px;" action="/APP/STUFF/SIGNIN/AUTH" method="POST">
-                <div class="form-group">
-                    <h3>
-                        <label class="control-label col-sm-1" for="ID" style="">
-                            <i class="glyphicon glyphicon-envelope"></i>
-                        </label>
-                    </h3>
-                    <div class="col-sm-5">
-	                      <input type="email" id="ID" name="ID" value="###ID_VALUE###" class="form-control" style="" placeholder="ID(Email)" >
+                <!--PW-->
+                <div class="row">
+                    <div class="col-xs-1 hidden-xs">
+                            <label class="control-label col-sm-1" for="PASSWORD">
+                                <h3><i class="glyphicon glyphicon-pencil"></i></h3>
+                            </label>
+                    </div>
+                    <div class="col-sm-6 col-xs-11">
+                        <div class="form-group" style="margin-top:10px;">
+                            <input type="password" id="PASSWORD" name="PASSWORD" value="###PASSWORD_VALUE###" class="form-control" placeholder="PASSWORD">
+                        </div>
+                    </div>
+                    <div class="col-sm-5 col-xs-1"></div>
+                </div>
+
+                <!--submit-->
+                <div class="row">
+                    <div class="col-sm-6" col-xs-11>
+	                    <input type="submit" name="SUBMIT" value="AUTH" class="btn btn-primary btn-md" />
+		                <input type="hidden" name="STATUS" value="SIGNIN" />
                     </div>
                 </div>
-
-                <div class="form-group">
-                    <h3>
-                        <label class="control-label col-sm-1" for="PASSWORD">
-                            <i class="glyphicon glyphicon-pencil"></i>
-                        </label>
-                    </h3>
-                    <div class="col-sm-5">
-                        <input type="password" id="PASSWORD" name="PASSWORD" value="###PASSWORD_VALUE###" class="form-control" placeholder="PASSWORD">
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    <h3>
-                        <label class="control-label col-sm-1" for="">
-                            <i class="glyphicon "></i>
-                        </label>
-                    </h3>
-                    <div class="col-sm-5">
-	                      <input type="submit" name="SUBMIT" value="AUTH" class="btn btn-primary btn-md" />
-                    </div>
-                </div>
-
-		          <input type="hidden" name="STATUS" value="SIGNIN" />
 	        </form>
         </div>
-    </div>
-
 <!--</body>-->
 <!--</html>-->
