stick plugin but not work...

--- a/HTML/HEAD.HTML
+++ b/HTML/HEAD.HTML
@@ -7,11 +7,13 @@
         <!-- BootstrapのCSS読み込み -->
         <link href="/BOOTSTRAP/css/bootstrap.min.css" rel="stylesheet">
 
-        <!-- jQuery読み込み -->
+        <!-- jQuery -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+        
+        <!-- Sticky -->
+        <script src="/LAYOUT/STICKY/jquery.sticky.js"></script>
 
-
-        <!-- BootstrapのJS読み込み -->
+        <!-- BootstrapのJS -->
         <script src="/BOOTSTRAP/js/bootstrap.min.js"></script>
 
 		<!--SIDE MENU-->
