--- a/HTML/INDEX.HTML
+++ b/HTML/INDEX.HTML
@@ -79,6 +79,11 @@
 					<h1>SURESHOT SYSTEM </h1>
 					<h1>SURESHOT SYSTEM </h1>
 					<h1>SURESHOT SYSTEM </h1>
+                    <div id="sticker">
+                        <div>
+                        Stick Rock'n roll!!!!!!
+                        </div>
+                    </div>
 					<h1>SURESHOT SYSTEM </h1>
 					<h1>SURESHOT SYSTEM </h1>
 					<h1>SURESHOT SYSTEM </h1>
@@ -100,6 +105,15 @@
 		</div>
 		<!-- Classie - class helper functions by @desandro https://github.com/desandro/classie -->
 		<script src="/LAYOUT/SIDE_MENU/js/classie.js"></script>
+        <script>
+            $(document).ready(function() {
+                $("#sticker").sticky({
+                    topSpacing: 0,
+                    center: true,
+                    className:  "hey"
+                });
+            });
+        </script>
 		<script>
 			var menuLeft = document.getElementById( 'cbp-spmenu-s1' ),
 				showLeft = document.getElementById( 'showLeft' ),
