--- a/APPLI/STUFF/SIGNIN/HTML/INPUT.HTML
+++ b/APPLI/STUFF/SIGNIN/HTML/INPUT.HTML
@@ -5,12 +5,13 @@
 
         <div class="container">
 
-            <!--Header Title-->
+            <!--Header Title
             <div class="row">
                 <h1 class="col-sm-6">
                     <p class="page-title">Stuff sign in</p>
                 </h1>
             </div>
+            -->
 
             <!--Header info-->
             <div class="row">
