--- a/HTML/NAVBAR.HTML
+++ b/HTML/NAVBAR.HTML
@@ -2,7 +2,7 @@
         <!--navbar-->
         <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
             <div class="navbar-header">
-                <a id="showLeft" class="navbar-brand" href="#">
+                <a id="showLeft" class="navbar-brand" href="#" style="width:100px;">
                 </a>
             </div>
 
@@ -13,6 +13,12 @@
                     </a>
                 </li>
             </ul>
+
+            <div style="margin-top:0.5em;">
+                <a style="padding-left:50px; font-size:26px; ">
+                    ###PAGE_NAME###
+                </a>
+            </div>
         <!--
             <ul class="nav navbar-nav navbar-right" style="margin-right:50px;">
                 <li class=""><a id="showLeftPush" href="#">Menu7</a></li>
