デザイン修正対応

--- a/APPLI/PARTS_LIST/LISTS/HTML/SHOW.HTML
+++ b/APPLI/PARTS_LIST/LISTS/HTML/SHOW.HTML
@@ -1,19 +1,9 @@
-<!--PARTS LISTS Contents-->
 <!--<!DOCTYPE html>-->
 <!--<html>-->
 
-<div class="container"">
+<div class="container">
     
     <div class="fixed">
-
-        <!--Header Title-->
-        <!--
-        <div class="row">
-            <h1 class="">
-                <p>Parts Lists</p>
-            </h1>
-        </div>
-        -->
 
         <!--Header Info-->
         <div class="row">
