--- a/APPLI/STUFF/NEW/HTML/CONFIRM.HTML
+++ b/APPLI/STUFF/NEW/HTML/CONFIRM.HTML
@@ -1,57 +1,78 @@
 <!--<!DOCTYPE html>-->
 <!--<html>-->
-   <body>
-    <div class="container">
+<!--<body>-->
+<div class="container">
+    <div class="col-md-6 col-md-offset-1">
+
+        <!--Header Info-->
         <div class="row">
-            <div class="col-md-6 col-md-offset-3">
-   
-                <!--
-                <h1>STUFF REGISTRY <span class="label label-info">Confirm</span></h1>
-		        -->
-                
-                <form action="/APP/STUFF/NEW/COMPLETE" method="POST">
-                    <div class="form-group">
-			            <h3>
-                            <span class="glyphicon glyphicon-user"></span>
-                            <span class="label label-default">###FAMILY_NAME_LABEL###</span>
-                        </h3>
-			            <input type="hidden" name="FAMILY_NAME" value="###FAMILY_NAME_VALUE###" />
-                    </div>
-			        <br />
-                    <div class="form-group">
-			            <h3>
-                            <span class="glyphicon glyphicon-user"></span>
-			                <span class="label label-default">###GIVEN_NAME_LABEL###</span>
-			            </h3>
-                        <input type="hidden" name="GIVEN_NAME" value="###GIVEN_NAME_VALUE###" />
-                    </div>
-	    		    <br />
-                    <div class="form-group">
-		    	        <h3>
-                            <span class="glyphicon glyphicon-envelope"></span>
-			                <span class="label label-default">###EMAIL_LABEL###</span>
-			            </h3>
-                        <input type="hidden" name="EMAIL" value="###EMAIL_VALUE###" />
-                    </div>
-	    		    <br />
-                    <div class="form-group">
-		    	        <h3>
-                            <span class="glyphicon glyphicon-envelope"></span>
-			                <span class="label label-default">###PASSWORD_LABEL###</span>
-			            </h3>
-                        <input type="hidden" name="PASSWORD" value="###PASSWORD_VALUE###" />
-                    </div>
+            <div class="col-md-1 hidden-xs" >
+                <label class="control-label">
+                    <i class="glyphicon glyphicon-info-sign"></i>
+                </label>
+            </div>
+            <div class="col-md-10 lbl-header-info">
+                <span class="label label-lg label-###INFO_LV### lbl-header-info">
+                この内容で登録しますか？
+                </span>
+            </div>
+        </div>
+        <br>
 
-			        <input type="hidden" name="STATUS" value="CONFIRM" />
+        <!--Contents-->
+        <form action="/APP/STUFF/NEW/COMPLETE" method="POST">
 
+            <!---->
+	        <div class="row">
+                <div class="col-md-1 hidden-xs">
+                    <label class="control-label">
+                        <i class="glyphicon glyphicon-user"></i>
+                    </label>
+                </div>
+                <div class="col-md-10 col-xs-11">
                     <div class="form-group">
-			            <button type="submit" class="btn btn-primary btn-lg" />
-		    	            <span class="glyphicon glyphicon-plus">OK</span>
-                        </button>
+                        <span class="label label-default">###FAMILY_NAME_LABEL###</span>
                     </div>
-		        </form>
+                </div>
+                <div class="col-md-1 col-xs-1"></div>
+	            <input type="hidden" name="FAMILY_NAME" value="###FAMILY_NAME_VALUE###" />
+            </div>
+	        <br />
+            <div class="form-group">
+	            <h3>
+                    <span class="glyphicon glyphicon-user"></span>
+	                <span class="label label-default">###GIVEN_NAME_LABEL###</span>
+	            </h3>
+                <input type="hidden" name="GIVEN_NAME" value="###GIVEN_NAME_VALUE###" />
+            </div>
+	        <br />
+            <div class="form-group">
+	            <h3>
+                    <span class="glyphicon glyphicon-envelope"></span>
+	                <span class="label label-default">###EMAIL_LABEL###</span>
+	            </h3>
+                <input type="hidden" name="EMAIL" value="###EMAIL_VALUE###" />
+            </div>
+	        <br />
+            <div class="form-group">
+	            <h3>
+                    <span class="glyphicon glyphicon-envelope"></span>
+	                <span class="label label-default">###PASSWORD_LABEL###</span>
+	            </h3>
+                <input type="hidden" name="PASSWORD" value="###PASSWORD_VALUE###" />
+            </div>
+
+	        <input type="hidden" name="STATUS" value="CONFIRM" />
+
+            <div class="form-group">
+	            <button type="submit" class="btn btn-primary btn-lg" />
+	                <span class="glyphicon glyphicon-plus">OK</span>
+                </button>
+            </div>
+	    </form>
             </div>
         </div>
     </div>
-	</body>
+</div>
+<!--</body>-->
 <!--</html>-->
