--- a/APPLI/STUFF/EDIT/HTML/INPUT.HTML
+++ b/APPLI/STUFF/EDIT/HTML/INPUT.HTML
@@ -1,58 +1,121 @@
 <!--<!DOCTYPE html>-->
 <!--<html>-->
-    <body>
+<!--<body>-->
+<div class="container">
+    <div class="col-md-6 col-md-offset-1">
+
+        <!--Header Info-->
         <div class="row">
-            <div class="col-md-6 col-md-offset-3">
-    
-                <!--
-                <h1>STUFF EDIT <span class="label label-default">Update</span></h1>
-		        -->
-                
-                <form action="/APP/STUFF/EDIT/CONFIRM" method="POST">
-                    <div class="form-group">
-                        <span class="label label-danger ###FAMILY_NAME_ERR###">FAMILY NAME was Invalid.</span>
-                        <span class="label label-danger ###GIVEN_NAME_ERR###">GIVEN NAME was Invalid.</span>
-                        <span class="label label-danger ###EMAIL_ERR###">EMAIL was Invalid.</span>
-                        <span class="label label-danger ###EMAIL_DUPLECATED###">Duplicated EMAIL.</span>
-                        <span class="label label-danger ###PASSWORD_ERR###">PASSWORD was Invalid.</span>
-                        <span class="label label-danger ###PASSWORD_CONFIRMATION_ERR###">PASSWORD CONFIRMATION was Invalid.</span>
-                    </div>
-                    <div class="form-group">
-			            <span class="glyphicon glyphicon-user"></span>
-                        <span class="label label-default">FAMILY NAME</span>
-			            <input type="text" name="FAMILY_NAME" value="###FAMILY_NAME_VALUE###" class="form-control" />
-                    </div>
-			        <br />
-                    <div class="form-group">
-			            <span class="glyphicon glyphicon-user"></span>
-			            <span class="label label-default">GIVEN NAME</span>
-    			        <input type="text" name="GIVEN_NAME" value="###GIVEN_NAME_VALUE###" class="form-control"/>
-                    </div>
-	    		    <br />
-                    <div class="form-group">
-		    	        <span class="glyphicon glyphicon-envelope"></span>
-			            <span class="label label-default">E-MAIL(LOGIN ID)</span>
-                        <input type="email" name="EMAIL" id="EMAIL" value="###EMAIL_VALUE###" class="form-control" />
-                    </div>
-                    <div class="form-group">
-		    	        <span class="glyphicon glyphicon-envelope"></span>
-			            <span class="label label-default">PASSWORD</span>
-                        <input type="password" name="PASSWORD" id="PASSWORD" value="###PASSWORD_VALUE###" class="form-control" />
-                    </div>
-                    <div class="form-group">
-		    	        <span class="glyphicon glyphicon-envelope"></span>
-			            <span class="label label-default">PASSWORD CONFIRMATION</span>
-                        <input type="password" name="PASSWORD_CONFIRMATION" id="PASSWORD_CONFIRMATION" value="###PASSWORD_CONFIRMATION_VALUE###" class="form-control" />
-                    </div>
-
-			        <input type="hidden" name="STATUS" value="INPUT" />
-			        <input type="hidden" name="STUFF_ID" value="###STUFF_ID###" />
-
-                    <div class="form-group">
-			            <input type="submit" name="SUBMIT" class="btn btn-primary btn-lg" />
-                    </div>
-		        </form>
+            <div class="col-md-1 col-xs-1" >
+                <label class="control-label">
+                    <i class="glyphicon glyphicon-info-sign"></i>
+                </label>
+            </div>
+            <div class="col-md-10 lbl-header-info">
+                <span class="label label-danger ###FAMILY_NAME_ERR###">FAMILY NAME was Invalid.</span>
+                <span class="label label-danger ###GIVEN_NAME_ERR###">GIVEN NAME was Invalid.</span>
+                <span class="label label-danger ###EMAIL_ERR###">EMAIL was Invalid.</span>
+                <span class="label label-danger ###EMAIL_DUPLECATED###">Duplicated EMAIL.</span>
+                <span class="label label-danger ###PASSWORD_ERR###">PASSWORD was Invalid.</span>
+                <span class="label label-danger ###PASSWORD_CONFIRMATION_ERR###">PASSWORD CONFIRMATION was Invalid.</span>
+                </span>
             </div>
         </div>
-	</body>
+        <br> 
+
+        <!--INPUT-->
+        <form action="/APP/STUFF/EDIT/CONFIRM" method="POST">
+            <div class="row">
+               <div class="col-md-1 hidden-xs">
+                    <label class="control-label">
+                        <i class="glyphicon glyphicon-user" style=""></i>
+                    </label>
+                </div>
+                <div class="col-md-10 col-xs-11">
+                    <div class="form-group">
+	                    <input type="text" name="FAMILY_NAME" value="###FAMILY_NAME_VALUE###" class="form-control" placeholder="Family Name" />
+                    </div>
+                </div>
+                <div class="col-md-1 col-xs-1"></div>
+            </div>
+            <br> 
+
+            <div class="row">
+                <div class="col-md-1 hidden-xs">
+                    <label class="control-label">
+                        <i class="glyphicon glyphicon-user"></i>
+                    </label>
+                </div>
+                <div class="col-md-10 col-xs-11">
+                    <div class="form-group">
+	                    <input type="text" name="GIVEN_NAME" value="###GIVEN_NAME_VALUE###" class="form-control" placeholder="Given Name" />
+                    </div>
+                </div>
+                <div class="col-md-1 col-xs-1"></div>
+            </div>
+            <br> 
+
+            <div class="row">
+                <div class="col-md-1 hidden-xs">
+                    <label class="control-label">
+                        <i class="glyphicon glyphicon-envelope"></i>
+                    </label>
+                </div>
+                <div class="col-md-10 col-xs-11">
+                    <div class="form-group">
+                        <input type="email" name="EMAIL" id="EMAIL" value="###EMAIL_VALUE###" class="form-control" placeholder="ID (e-mail)" />
+                    </div>
+                </div>
+                <div class="col-md-1 col-xs-1"></div>
+            </div>
+            <br> 
+
+            <div class="row">
+                <div class="col-md-1 hidden-xs ">
+                    <label class="control-label">
+                        <i class="glyphicon glyphicon-edit"></i>
+                    </label>
+                </div>
+                <div class="col-md-10 col-xs-11 ">
+                    <div class="form-group">
+                        <input type="password" name="PASSWORD" id="PASSWORD" value="###PASSWORD_VALUE###" class="form-control" placeholder="Password" />
+                    </div>
+                </div>
+                <div class="col-md-1 col-xs-1"></div>
+            </div>
+            <br> 
+
+            <div class="row">
+                <div class="col-md-1 hidden-xs">
+                    <label class="control-label">
+                        <i class="glyphicon glyphicon-thumbs-up"></i>
+                    </label>
+                </div>
+                <div class="col-md-10 col-xs-11">
+                    <div class="form-group">
+                        <input type="password" name="PASSWORD_CONFIRMATION" id="PASSWORD_CONFIRMATION" value="###PASSWORD_CONFIRMATION_VALUE###" class="form-control" placeholder="Password Confirmation" />
+                    </div>
+                </div>
+                <div class="col-md-1 col-xs-1"></div>
+            </div>
+            <br> 
+
+            <div class="row">
+                <div class="col-md-1 hidden-xs">
+                </div>
+                <div class="col-md-10 col-xs-11">
+                    <div class="form-group">
+	                    <button type="submit" class="btn btn-primary btn-md" />
+                            <span class="glyphicon glyphicon-eye-open"> Chek!!</span>
+                        </button>
+                    </div>
+                </div>
+            </div>
+
+	    	<input type="hidden" name="STATUS" value="INPUT" />
+	    	<input type="hidden" name="STUFF_ID" value="###STUFF_ID###" />
+	    </form>
+    </div>
+</div>
+<!--</body>-->
 <!--</html>-->
