--- a/APPLI/STUFF/SIGNIN/HTML/INPUT.HTML
+++ b/APPLI/STUFF/SIGNIN/HTML/INPUT.HTML
@@ -61,6 +61,7 @@
             <div class="col-md-10 col-xs-11">
                 <input type="submit" name="SUBMIT" value="AUTH" class="btn btn-primary btn-md" />
                 <input type="hidden" name="STATUS" value="SIGNIN" />
+                <input type="hidden" name="RETURN_URL" value="###RETURN_URL###" />
             </div>
         </div>
     </form>
