--- a/APPLI/CUSTOMER/NEW/HTML/COMPLETE.HTML
+++ b/APPLI/CUSTOMER/NEW/HTML/COMPLETE.HTML
@@ -1,47 +1,62 @@
 <!--<!DOCTYPE html>-->
 <!--<html>-->
-   <body>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6 col-md-offset-3">
-                <h1>Customer <span class="label label-success">Complete</span></h1>
-		        <form action="/APP/CUSTOMER/LISTS/" method="GET">
-                    <div class="form-group">
-			            <h3>
-                            <span class="glyphicon glyphicon-user"></span>
-                            <span class="label label-default">###FAMILY_NAME_LABEL###</span>
-                        </h3>
-                    </div>
-			        <br />
-                    <div class="form-group">
-			            <h3>
-                            <span class="glyphicon glyphicon-user"></span>
-			                <span class="label label-default">###GIVEN_NAME_LABEL###</span>
-			            </h3>
-                    </div>
-	    		    <br />
-                    <div class="form-group">
-		    	        <h3>
-                            <span class="glyphicon glyphicon-envelope"></span>
-			                <span class="label label-default">###EMAIL_LABEL###</span>
-			            </h3>
-                    </div>
+<!--<body>-->
+<div class="container">
+    <div class="col-md-6 col-md-offset-1">
 
-			        <input type="hidden" name="PASSWORD" value="###PASSWORD_VAUE###" />
-			        <input type="hidden" name="STATUS" value="COMPLETE" />
-	    		    <br />
-	    		    <br />
-                    <div class="form-group">
-                        <a class="btn btn-default" href="/APP/CUSTOMER/LISTS/SHOW">
-		    	            <span class="glyphicon glyphicon-list"> LIST</span>
-                        </a>
-                        <a class="btn btn-default" href="/">
-		    	            <span class="glyphicon glyphicon-hand-up"> TOP</span>
-                        </a>
-                    </div>
-		        </form>
+        <!--Header Info-->
+        <div class="row">
+            <div class="col-md-1 hidden-xs" >
+                <label class="control-label">
+                    <i class="glyphicon glyphicon-info-sign"></i>
+                </label>
+            </div>
+            <div class="col-md-10 lbl-header-info">
+                <span class="text-success h4 lbl-header-info">
+                下記内容で登録が完了しました。
+                </span>
             </div>
         </div>
+        <br>
+
+        <!--Contents-->
+	    <div class="row">
+            <div class="col-md-1 hidden-xs">
+                <label class="control-label">
+                    <i class="glyphicon glyphicon-user"></i>
+                </label>
+            </div>
+            <div class="col-md-10 col-xs-11">
+                <span class="text-info h3">###FAMILY_NAME_LABEL###</span>
+            </div>
+            <div class="col-md-1 col-xs-1"></div>
+        </div>
+	    <br />
+
+	    <div class="row">
+            <div class="col-md-1 hidden-xs">
+                <label class="control-label">
+                    <i class="glyphicon glyphicon-user"></i>
+                </label>
+            </div>
+            <div class="col-md-10 col-xs-11">
+	            <span class="text-info h3">###GIVEN_NAME_LABEL###</span>
+	        </div>
+        </div>
+	    <br />
+
+	    <div class="row">
+            <div class="col-md-1 hidden-xs">
+                <label class="control-label">
+                    <i class="glyphicon glyphicon-envelope"></i>
+                </label>
+            </div>
+            <div class="col-md-10 col-xs-11">
+	            <span class="text-info h3">###EMAIL_LABEL###</span>
+	        </div>
+        </div>
+	    <br />
     </div>
-	</body>
+</div>
+<!--body-->
 <!--</html>-->
