--- a/APPLI/CUSTOMER/EDIT/HTML/CONFIRM.HTML
+++ b/APPLI/CUSTOMER/EDIT/HTML/CONFIRM.HTML
@@ -1,60 +1,97 @@
 <!--<!DOCTYPE html>-->
 <!--<html>-->
-    <body>
-    <div class="container">
+<!--<body>-->
+<div class="container">
+    <div class="col-md-6 col-md-offset-1">
+
+        <!--Header Info-->
         <div class="row">
-            <div class="col-md-6 col-md-offset-3">
-                <h1>Cusromer update <span class="label label-info">Confirm</span></h1>
-		        <form action="/APP/CUSTOMER/EDIT/COMPLETE" method="POST">
-                    <div class="form-group">
-			            <h2>
-                            <span class="glyphicon glyphicon-user"></span>
-                            <span class="label label-default">###CUSTOMER_ID_NOT_MATCH###</span>
-                        </h2>
-                    </div>
-			        <br />
-
-                    <div class="form-group">
-			            <h3>
-                            <span class="glyphicon glyphicon-user"></span>
-                            <span class="label label-default">###FAMILY_NAME_LABEL###</span>
-                        </h3>
-			            <input type="hidden" name="FAMILY_NAME" value="###FAMILY_NAME_VALUE###" />
-                    </div>
-			        <br />
-                    <div class="form-group">
-			            <h3>
-                            <span class="glyphicon glyphicon-user"></span>
-			                <span class="label label-default">###GIVEN_NAME_LABEL###</span>
-			            </h3>
-                        <input type="hidden" name="GIVEN_NAME" value="###GIVEN_NAME_VALUE###" />
-                    </div>
-	    		    <br />
-                    <div class="form-group">
-		    	        <h3>
-                            <span class="glyphicon glyphicon-envelope"></span>
-			                <span class="label label-default">###EMAIL_LABEL###</span>
-			            </h3>
-                        <input type="hidden" name="EMAIL" value="###EMAIL_VALUE###" />
-                    </div>
-	    		    <br />
-                    <div class="form-group">
-		    	        <h3>
-                            <span class="glyphicon glyphicon-envelope"></span>
-			                <span class="label label-default">###PASSWORD_LABEL###</span>
-			            </h3>
-                        <input type="hidden" name="PASSWORD" value="###PASSWORD_VALUE###" />
-                    </div>
-
-			        <input type="hidden" name="STATUS" value="CONFIRM" />
-			        <input type="hidden" name="CUSTOMER_ID" value="###CUSTOMER_ID###" />
-
-                    <div class="form-group">
-			            <input type="submit" name="SUBMIT" class="btn btn-primary btn-lg" />
-                    </div>
-		        </form>
+            <div class="col-md-1 hidden-xs" >
+                <label class="control-label">
+                    <i class="glyphicon glyphicon-info-sign"></i>
+                </label>
+            </div>
+            <div class="col-md-10 lbl-header-info">
+                <span class="text-primary h4 lbl-header-info">
+                この内容に変更しますか？
+                </span>
             </div>
         </div>
+        <br>
+
+        <!--Contents-->
+        <form action="/APP/CUSTOMER/EDIT/COMPLETE" method="POST">
+
+            <!---->
+	        <div class="row">
+                <div class="col-md-1 hidden-xs">
+                    <label class="control-label">
+                        <i class="glyphicon glyphicon-user"></i>
+                    </label>
+                </div>
+                <div class="col-md-10 col-xs-11">
+                    <span class="text-info h3">###FAMILY_NAME_LABEL###</span>
+                </div>
+                <div class="col-md-1 col-xs-1"></div>
+	            <input type="hidden" name="FAMILY_NAME" value="###FAMILY_NAME_VALUE###" />
+            </div>
+	        <br />
+
+            <div class="row">
+                <div class="col-md-1 hidden-xs">
+                    <label class="control-label">
+                        <i class="glyphicon glyphicon-user"></i>
+                    </label>
+                </div>
+                <div class="col-md-10 col-xs-11">
+	                <span class="text-info h3">###GIVEN_NAME_LABEL###</span>
+                </div>
+                <input type="hidden" name="GIVEN_NAME" value="###GIVEN_NAME_VALUE###" />
+            </div>
+	        <br />
+
+            <div class="row">
+                <div class="col-md-1 hidden-xs">
+                    <label class="control-label">
+                        <i class="glyphicon glyphicon-envelope"></i>
+                    </label>
+                </div>
+                <div class="col-md-10 col-xs-11">
+	                <span class="text-info h3">###EMAIL_LABEL###</span>
+                </div>
+                <input type="hidden" name="EMAIL" value="###EMAIL_VALUE###" />
+            </div>
+	        <br />
+
+            <div class="row">
+                <div class="col-md-1 hidden-xs">
+                    <label class="control-label">
+                        <i class="glyphicon glyphicon-edit"></i>
+                    </label>
+                </div>
+                <div class="col-md-10 col-xs-11">
+	                <span class="text-info h3">###PASSWORD_LABEL###</span>
+                </div>
+                <input type="hidden" name="PASSWORD" value="###PASSWORD_VALUE###" />
+            </div>
+	        <br />
+
+			<input type="hidden" name="STATUS" value="CONFIRM" />
+			<input type="hidden" name="CUSTOMER_ID" value="###CUSTOMER_ID###" />
+
+            <div class="row">
+                <div class="col-md-1 hidden-xs">
+                </div>
+                <div class="col-md-10 col-xs-11">
+                    <div class="form-group">
+	                    <button type="submit" class="btn btn-primary btn-md" />
+	                        <span class="glyphicon glyphicon-plus">OK</span>
+                        </button>
+                    </div>
+                </div>
+            </div>
+	    </form>
     </div>
-	</body>
+</div>
+<!--</body>-->
 <!--</html>-->
